Fixing alignment of hero content

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,16 @@ html, body {
     padding: 0; 
 } 
 
+ .hero{
+    display: block;
+    
+}
+
 
 .headerlogo{
     color: #F9FAF8;
     font-size: 24px;
+    margin-top: 0;
 }
 .mgnone{
     margin: 0;
@@ -44,6 +50,7 @@ justify-content: space-around;
     color: #F9FAF8;
     width: 350px;
     
+    
 }
 a{
     color:#F9FAF8
@@ -57,18 +64,16 @@ a{
 .content_cont{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
+    margin-left: 200px;
 }
 
-contimgL{
-    background-color: ;
-}
 
 .para{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-  
+   
 }
 
 .quote{
